<resources>
    <string name="app_name">Tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="_02_25_2025">02/25/2025</string>
    <string name="completed">Completed</string>
    <string name="complete">Complete</string>
    <string name="tasks">Tasks</string>
    <string name="add_task">Add task</string>
    <string name="log_out">Log out</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="due_date">Due Date</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="test_crash">Test crash</string>
</resources>