<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AddTaskFragment"
    android:padding="16dp">

    <TextView
        android:id="@+id/add_task_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_task_label"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/title_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/title_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_label"
        app:layout_constraintBottom_toBottomOf="@id/title_label"
        android:layout_marginHorizontal="16dp"
        android:labelFor="@id/title_label"
        android:hint="@string/task_title"
        android:inputType="text"/>

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_label"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/description_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/description_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/description_label"
        app:layout_constraintBottom_toBottomOf="@id/description_label"
        android:layout_marginHorizontal="16dp"
        android:labelFor="@id/description_label"
        android:hint="@string/task_description"
        android:inputType="text" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_label"
        android:layout_marginTop="8dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/day_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_label"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/day_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/day_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/day_label"
        app:layout_constraintBottom_toBottomOf="@id/day_label"
        android:layout_marginHorizontal="16dp"
        android:labelFor="@id/day_label"
        android:hint="@string/day"
        android:inputType="number" />


    <TextView
        android:id="@+id/month_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/day_label"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/month_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/month_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/month_label"
        app:layout_constraintBottom_toBottomOf="@id/month_label"
        android:layout_marginHorizontal="16dp"
        android:labelFor="@id/month_label"
        android:hint="@string/month"
        android:inputType="number" />

    <TextView
        android:id="@+id/year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/month_label"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/year_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/year_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/year_label"
        app:layout_constraintBottom_toBottomOf="@id/year_label"
        android:layout_marginHorizontal="16dp"
        android:labelFor="@id/year_label"
        android:hint="@string/year"
        android:inputType="number" />

    <Button
        android:id="@+id/add_task_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        app:layout_constraintTop_toBottomOf="@id/year_label"
        android:layout_margin="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>